--- a/Single In Your Area/Single In Your Area.csproj
+++ b/Single In Your Area/Single In Your Area.csproj
@@ -51,6 +51,8 @@
   <ItemGroup>
     <Compile Include="ButtonPress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripts\NavPoint.cs" />
+    <Compile Include="Scripts\NavPointFade.cs" />
     <Compile Include="Scripts\Player.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
