--- a/Single In Your Area/Single In Your Area.csproj
+++ b/Single In Your Area/Single In Your Area.csproj
@@ -49,8 +49,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ButtonPress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripts\GlitchEffectShaderController.cs" />
     <Compile Include="Scripts\LabelScript.cs" />
     <Compile Include="Scripts\NavPoint.cs" />
     <Compile Include="Scripts\NavPointFade.cs" />
